--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -36,7 +36,7 @@
       href="//db.onlinewebfonts.com/c/157c6cc36dd65b1b2adc9e7f3329c761?family=Amazon+Ember"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Food Ordering System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
